--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Dockerfile.cross
 go.work
 
 # Kubernetes Generated files - skip generated files, except for vendored files
-!vendor/**/zz_generated.*
+!vendir/**/zz_generated.*
 
 # editor and IDE paraphernalia
 .idea
