--- a/config/crd/bases/kuberik.com_monitorchecks.yaml
+++ b/config/crd/bases/kuberik.com_monitorchecks.yaml
@@ -14,7 +14,20 @@ spec:
     singular: monitorcheck
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.matchedMonitorsCount
+      name: Matched
+      type: integer
+    - jsonPath: .status.healthyMonitorsCount
+      name: Healthy
+      type: integer
+    - jsonPath: .status.unhealthyMonitorsCount
+      name: Unhealthy
+      type: integer
+    - jsonPath: .status.lastCheckTime
+      name: Last Check
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: MonitorCheck is the Schema for the monitorchecks API
@@ -37,18 +50,157 @@ spec:
           metadata:
             type: object
           spec:
-            description: spec defines the desired state of MonitorCheck
+            description: MonitorCheckSpec defines the desired state of MonitorCheck
             properties:
-              foo:
-                description: foo is an example field of MonitorCheck. Edit monitorcheck_types.go
-                  to remove/update
-                type: string
+              healthCheckTemplate:
+                description: HealthCheckTemplate defines the template for creating
+                  kuberik HealthCheck resources
+                properties:
+                  annotations:
+                    additionalProperties:
+                      type: string
+                    description: Annotations specifies additional annotations for
+                      the HealthCheck resource
+                    type: object
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels specifies additional labels for the HealthCheck
+                      resource
+                    type: object
+                type: object
+              labelSelector:
+                description: LabelSelector specifies which DatadogMonitors to watch
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: |-
+                        A label selector requirement is a selector that contains values, a key, and an operator that
+                        relates the key and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: |-
+                            operator represents a key's relationship to a set of values.
+                            Valid operators are In, NotIn, Exists and DoesNotExist.
+                          type: string
+                        values:
+                          description: |-
+                            values is an array of string values. If the operator is In or NotIn,
+                            the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                            the values array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                          x-kubernetes-list-type: atomic
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                      map is equivalent to an element of matchExpressions, whose key field is "key", the
+                      operator is "In", and the values array contains only "value". The requirements are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
+            required:
+            - healthCheckTemplate
+            - labelSelector
             type: object
           status:
-            description: status defines the observed state of MonitorCheck
+            description: MonitorCheckStatus defines the observed state of MonitorCheck
+            properties:
+              conditions:
+                description: Conditions represent the latest available observations
+                  of a MonitorCheck's current state
+                items:
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
+                  properties:
+                    lastTransitionTime:
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      description: |-
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
+              healthyMonitorsCount:
+                description: HealthyMonitorsCount is the number of healthy DatadogMonitors
+                format: int32
+                type: integer
+              lastCheckTime:
+                description: LastCheckTime is the timestamp of the last health check
+                format: date-time
+                type: string
+              matchedMonitorsCount:
+                description: MatchedMonitorsCount is the total number of DatadogMonitors
+                  that match the label selector
+                format: int32
+                type: integer
+              unhealthyMonitorsCount:
+                description: UnhealthyMonitorsCount is the number of unhealthy DatadogMonitors
+                format: int32
+                type: integer
             type: object
-        required:
-        - spec
         type: object
     served: true
     storage: true
