--- a/config/samples/v1alpha1_monitorcheck.yaml
+++ b/config/samples/v1alpha1_monitorcheck.yaml
@@ -1,9 +1,26 @@
 apiVersion: kuberik.com/v1alpha1
 kind: MonitorCheck
 metadata:
-  labels:
-    app.kubernetes.io/name: datadog-controller
-    app.kubernetes.io/managed-by: kustomize
   name: monitorcheck-sample
+  namespace: default
 spec:
-  # TODO(user): Add fields here
+  # Label selector to match DatadogMonitor resources
+  labelSelector:
+    matchLabels:
+      app: my-app
+      environment: production
+    matchExpressions:
+      - key: tier
+        operator: In
+        values:
+          - frontend
+          - backend
+
+  # Template for creating kuberik HealthCheck resources
+  # Similar to PodTemplate in Kubernetes deployments
+  healthCheckTemplate:
+    labels:
+      app: "{{ .Name }}"
+      managed-by: monitorcheck-controller
+    annotations:
+      monitorcheck.kuberik.com/created-by: "{{ .Name }}"
